# ---

./: CHANGELOG.md  Cargo.toml  README.md  bugs.md  documentation.md  rust-toolchain.toml  tasks.md
api_server_crate/: Cargo.toml
api_server_crate/src/: main.rs
cli_app/: Cargo.toml
cli_app/src/: main.rs
config/: model-hub.toml
core_burn/: Cargo.toml
core_burn/src/: error.rs  kv_cache.rs  lib.rs  rope.rs
core_burn/src/architectures/: gemma.rs  mod.rs
core_burn/src/architectures/gemma/: attention.rs  ffn.rs  mod.rs
gui_app/: Cargo.toml
inference_engine/: Cargo.toml
lsp_server_backend/: Cargo.toml
model-hub/: Cargo.toml
model_loader/: Cargo.toml
model_loader/src/: .gitkeep_ml_src  error.rs  lib.rs  loader.rs  types.rs  validation.rs
model_loader/tests/: .gitkeep_ml_tests
scripts/: auto-checklist.ps1  dev-status.ps1  log-bug.ps1  release-template.ps1
training_engine/: Cargo.toml
utils_crate/: Cargo.toml
utils_crate/src/: config.rs  error.rs  inference_task.rs  lib.rs  logger.rs  path.rs  path_utils.rs  sampling_params.rs
utils_crate/tests/: .gitkeep_utils_tests  config_tests.rs  error_tests.rs  inference_task_tests.rs  logger_tests.rs  path_tests.rs  path_utils_tests.rs  sampling_params_tests.rs
