# core_burn/Cargo.toml
[package]
name = "core_burn"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false # Это внутренний крейт.
description = "Ядро реализаций моделей машинного обучения на Burn (Gemma, RoPE, KV-кэш)."

[dependencies]
# --- Зависимости, версии которых наследуются из workspace ---
# `core_burn` наследует фичи `burn` из workspace (включая "autodiff").
# Это нормально, так как `core_burn` может использоваться с `Autodiff<B>` через фичу `autodiff_backend_support`.
burn = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true, optional = true } # Опционален, для Config derive и тестов.
utils_crate = { path = "../utils_crate", optional = true, features = ["serde"] } # Опционален, для интеграции ошибок.
half = { workspace = true, optional = true } # Опционален, для фичи `wgpu_backend`.

# --- Опциональные бэкенды Burn (версии указываются здесь, так как они НЕ в [workspace.dependencies]) ---
burn-ndarray = { version = "0.17.0", optional = true, default-features = false } # Added default-features = false
burn-tch = { version = "0.17.0", optional = true, default-features = false } # Added default-features = false
burn-wgpu = { version = "0.17.0", optional = true, default-features = false } # Added default-features = false
# `burn-autodiff` (крейт-обертка) нужен, если `core_burn` будет типизирован `Autodiff<B>`.
burn-autodiff = { version = "0.17.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
approx = { workspace = true }
# Тестовый бэкенд с явной версией и фичами.
# Features like "autodiff" for the test backend come from the burn crate's own features,
# which are enabled in its dependency declaration.
burn-ndarray = { version = "0.17.0", default-features = false, features = ["std", "module", "tensor"] }
# Removed "autodiff" from burn-ndarray features list here as it's not a feature *of* burn-ndarray,
# but rather a feature of `burn` that burn-ndarray can be used *with*.
# The main `burn` dependency (from workspace) has "autodiff" feature.

[features]
default = ["ndarray_backend"] # Бэкенд по умолчанию для этой библиотеки.

# Фичи для активации конкретных бэкендов.
# `burn/ndarray` (и т.д.) активирует соответствующую фичу в самом крейте `burn`.
# The main `burn` dependency already has "autodiff" feature from workspace.
# So, these backend features primarily enable the backend-specific feature in `burn`.
ndarray_backend = ["dep:burn-ndarray", "burn/ndarray"]
tch_backend = ["dep:burn-tch", "burn/tch"]
wgpu_backend = ["dep:burn-wgpu", "dep:half", "burn/wgpu"] # `wgpu` часто требует `half`.

# Фича для поддержки обертки Autodiff<B> над бэкендами.
# Активирует зависимость `burn-autodiff` (крейт). Фича "autodiff" для `burn` уже включена из workspace.
autodiff_backend_support = ["dep:burn-autodiff"]

# Другие опциональные фичи для `core_burn`.
serde_json_feature = ["dep:serde_json"]
with_utils_crate = ["dep:utils_crate"]
```
