# core_burn/Cargo.toml
[package]
name = "core_burn"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false
description = "Ядро реализаций моделей машинного обучения на Burn (Gemma) для AI Агента."

[dependencies]
burn = { workspace = true } 
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true, optional = true }
utils_crate = { path = "../utils_crate", optional = true, features = ["serde_support"] }
half = { workspace = true, optional = true }

burn-ndarray = { version = "0.17.0", default-features = false, features = ["std"], optional = true }
burn-tch = { version = "0.17.0", default-features = false, features = ["std"], optional = true }
burn-wgpu = { version = "0.17.0", default-features = false, features = ["std"], optional = true }
burn-autodiff = { version = "0.17.0", optional = true } 

rayon = { workspace = true, optional = true } 

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true } 
approx = { workspace = true }
burn-ndarray = { version = "0.17.0", default-features = false, features = ["std"] } 

[features]
default = ["ndarray_backend"] 

ndarray_backend = ["dep:burn-ndarray"]
tch_backend = ["dep:burn-tch"]
wgpu_backend = ["dep:burn-wgpu", "dep:half"] 

autodiff_support = ["dep:burn-autodiff"] 

serde_json_feature = ["dep:serde_json"] 
with_utils_crate = ["dep:utils_crate"]
rayon_support = ["dep:rayon"]
```
