# inference_engine/Cargo.toml
[package]
name = "inference_engine"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = false
description = "Движок инференса для LLM, включающий загрузку моделей, управление KV-кэшем и семплирование."

[dependencies]
# --- Локальные зависимости ---
utils_crate = { path = "../utils_crate", features = ["task_definitions_serde", "logger_utils_feature", "config_toml_feature", "tokio_sender_feature"] } # Added more features likely needed by inference engine
model_loader = { path = "../model_loader" }
core_burn = { path = "../core_burn", default-features = false } # Управляем бэкендом `core_burn` через фичи `inference_engine`.

# --- Зависимости, версии которых наследуются из workspace ---
# `inference_engine` наследует фичи `burn` из workspace (включая "autodiff").
# Это позволяет `InferenceRunner` быть типизированным `Autodiff<B>` через фичу `autodiff_support`.
burn = { workspace = true }
tokenizers = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true } # Для EngineConfig.
rand = { workspace = true } # Now inherited from workspace
rand_chacha = { workspace = true } # Now inherited from workspace
thiserror = { workspace = true }
anyhow = { workspace = true } # Added anyhow
itertools = { workspace = true, optional = true } # Added itertools as optional

# --- Опциональные бэкенды Burn (версии указываются здесь) ---
burn-ndarray = { version = "0.17.0", optional = true, default-features = false } # Added default-features = false
burn-tch = { version = "0.17.0", optional = true, default-features = false } # Added default-features = false
burn-wgpu = { version = "0.17.0", optional = true, default-features = false } # Added default-features = false
# `burn-autodiff` (крейт-обертка) нужен, если `InferenceRunner` будет типизирован `Autodiff<B>`.
burn-autodiff = { version = "0.17.0", optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
# Тестовый бэкенд.
burn-ndarray = { version = "0.17.0", default-features = false, features = ["std", "module", "tensor"] } # Removed "autodiff" feature

[features]
default = ["ndarray_backend", "standard_sampling"] # Бэкенд по умолчанию для `inference_engine`.

# Фичи для выбора бэкенда, пробрасывающие выбор в `core_burn`.
ndarray_backend = ["dep:burn-ndarray", "core_burn/ndarray_backend"]
tch_backend = ["dep:burn-tch", "core_burn/tch_backend"]
wgpu_backend = ["dep:burn-wgpu", "core_burn/wgpu_backend"]

# Фича для опциональной поддержки `Autodiff<B>` в `InferenceRunner`.
# Активирует `dep:burn-autodiff` (крейт) и пробрасывает `core_burn/autodiff_backend_support`.
# Фича "autodiff" для `burn` уже включена из workspace.
autodiff_support = ["dep:burn-autodiff", "core_burn/autodiff_backend_support"]

# Feature for sampling capabilities
standard_sampling = ["dep:itertools"] # rand and rand_chacha are now direct workspace dependencies
