# model-hub/Cargo.toml
# Корневой манифест рабочего пространства (workspace).
# Определяет членов воркспейса, общие метаданные пакета и
# унифицированные версии для ОБЩИХ зависимостей.
[workspace]
resolver = "2" # Используем новый резолвер зависимостей Cargo.
members = [
    "utils_crate",
    "model_loader",
    "core_burn",
    "inference_engine",
    "lsp_server_backend",
    "gui_app",
    "cli_app",
    "training_engine",    # Оставляем как заглушку для будущей функциональности обучения.
]

# Общие метаданные для всех пакетов в воркспейсе.
# Подкрейты могут наследовать эти значения, используя `authors = { workspace = true }` и т.д.
[workspace.package]
authors = ["SOLTISON<4030305@gmail.com>"]
edition = "2021"
rust-version = "1.78" # Минимальная поддерживаемая версия Rust.
license = "MIT OR Apache-2.0"
repository = "local" # Укажите URL, если проект будет на GitHub/GitLab.
# homepage = "https://github.com/ipbog/model-hub" # Раскомментируйте, если есть.
readme = "README.md"
description = "Оффлайн ИИ-помощник для разработчиков с поддержкой моделей (Gemma) и LSP-интеграцией."
publish = false # Корневой пакет воркспейса обычно не публикуется.
version = "0.1.0" # Общая версия для пакетов, если они ее наследуют.

# [workspace.dependencies]
# Эта секция унифицирует версии для ОБЩИХ зависимостей,
# которые используются многими крейтами в воркспейсе.
# Атрибут `optional = true` здесь НЕ ИМЕЕТ СМЫСЛА.
# Бэкенды `burn-*` и `burn-autodiff` (как отдельные крейты) УДАЛЕНЫ отсюда.
[workspace.dependencies]
# --- Основной ML фреймворк ---
# `burn` сам по себе является общей зависимостью для всех ML-компонентов.
# Здесь указываем набор фич, который является хорошей базой.
# Крейты, которым нужны доп. фичи (например, `training_engine` для "train", "optim"),
# будут добавлять их через `burn = { workspace = true, features = ["train", "optim"] }`.
# Фича "autodiff" включена здесь, так как предполагается, что приложения могут использовать `Autodiff<Backend>`.
burn = { version = "0.17.0", default-features = false, features = [
    "std", "record", "module", "tensor", "nn", # Базовый набор для инференса и работы с моделями.
    "autodiff" # Включает фичу "autodiff" на самом крейте `burn`.
] }

# --- Базовые утилиты, нужные почти всем ---
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.121"
thiserror = "1.0.59"
anyhow = "1.0.98"
tokio = { version = "1.45.0", features = ["full"] } # "full" для простоты, если подходит для всех.
uuid = { version = "1.8.0", features = ["v4", "serde"] } # "serde" фича для консистентности

# --- Специфичные для домена, но могут быть общими (версии унифицируются) ---
lsp-types = { version = "0.97.0", features = ["proposed"] }
safetensors = "0.5.3"
memmap2 = "0.9.5"
tokenizers = "0.21.1"
lsp-server = "0.7.6"
dashmap = "5.5.3"

# --- Другие утилиты, версии которых унифицируем (подкрейты могут делать их optional) ---
clap = { version = "4.5.38", features = ["derive", "wrap_help", "env"] }
eframe = "0.31.1"
egui = "0.31.1"
egui_extras = { version = "0.31.1", features = ["syntax_highlighting"] }
rfd = "0.15.3"
config = { version = "0.15.11", features = ["toml"] } # Крейт `config` для загрузки конфигураций
toml_edit = { version = "0.22.14", features = ["easy"] }
tracing-appender = "0.2.3"
path-absolutize = "3.1.1"
path-clean = "1.0.1"
fs_extra = "1.3.0"
axum = "0.8.4"
chrono = { version = "0.4.41", features = ["serde"] }
rayon = "1.10.1"
bytemuck = "1.23.0"
half = "2.6.0"
dirs-next = "2.0.0"
indexmap = { version = "2.9.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
once_cell = "1.21.3"
itertools = "0.14.0"
derive-new = "0.7.0"
indicatif = "0.17.11"
rand = "0.8.5"  # Added from inference_engine, assuming it's a common utility
rand_chacha = "0.3.1" # Added from inference_engine
# winapi = { version = "0.3.9", features = ["std", "winuser"] } # Укажите фичи, если нужен

# --- Зависимости только для разработки/тестирования (на уровне воркспейса) ---
[workspace.dev-dependencies]
tempfile = "3.10.1"
serial_test = "3.2.0"
approx = "0.5.1" # Для сравнения float в тестах.

# Профили сборки
[profile.release]
lto = true           # Включает Link Time Optimization для лучшей производительности.
opt-level = 3        # Максимальный уровень оптимизации.
panic = "abort"      # Завершать программу при панике, а не разворачивать стек (уменьшает размер).
strip = "symbols"    # Удаляет отладочные символы из релизного бинарника (уменьшает размер).

[profile.dev]
# opt-level = 0 # Значение по умолчанию для быстрой компиляции в режиме разработки.

[profile.release-with-debug]
inherits = "release" # Наследует настройки из профиля release.
debug = true         # Включает отладочную информацию.
