# model_loader/Cargo.toml
[package]
name = "model_loader" # Имя крейта
version = { workspace = true } # Версия из рабочего пространства
edition = { workspace = true } # Редакция Rust из рабочего пространства
authors = { workspace = true } # Авторы из рабочего пространства
license = { workspace = true } # Лицензия из рабочего пространства
repository = { workspace = true } # Репозиторий из рабочего пространства
publish = false # Этот крейт не предназначен для публикации на crates.io, это внутренняя часть проекта

[dependencies]
# Локальные зависимости проекта
utils_crate = { path = "../utils_crate", optional = true } # Общие утилиты, опционально
core_burn = { path = "../core_burn" } # Ядро модели на Burn, содержит GemmaModel и его Record

# Burn (версия 0.17.0 наследуется из [workspace.dependencies])
# Используется для работы с тензорами, моделями и их записями (весами)
burn = { workspace = true, default-features = false, features = ["std", "module", "record", "tensor"] }

# Форматы данных и утилиты
safetensors = { workspace = true } # Для работы с форматом SafeTensors
serde = { workspace = true }       # Для сериализации и десериализации данных (например, JSON)
serde_json = { workspace = true }  # Для парсинга JSON конфигураций (config.json)
tracing = { workspace = true }     # Для логирования событий
memmap2 = { workspace = true }     # Для отображения файлов в память (эффективное чтение больших файлов)
thiserror = { workspace = true }   # Для удобного создания кастомных типов ошибок
chrono = { workspace = true, optional = true } # Для работы с датой и временем (например, для ModelInfo.loaded_at)

# Опциональные зависимости для поддержки типов данных f16/bf16 при загрузке тензоров.
# В текущей конфигурации (без явного включения фичи `with_f16_bf16_support`) они не будут активны.
bytemuck = { workspace = true, optional = true } # Для безопасного преобразования между типами данных (часто используется с half)
half = { workspace = true, optional = true }     # Для поддержки 16-битных чисел с плавающей запятой (f16, bf16)

[dev-dependencies]
# Зависимости, используемые только для тестов
tempfile = { workspace = true }    # Для создания временных файлов и директорий в тестах
serial_test = { workspace = true } # Для запуска тестов последовательно (если они влияют на общее состояние)
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] } # Асинхронная среда выполнения для тестов
# Бэкенд NdArray для Burn, используется в тестах для выполнения операций на CPU
burn-ndarray = { workspace = true, default-features = false, features = ["std", "module", "tensor", "serde"] }

[features]
# Фичи (возможности) крейта
default = ["with_chrono"] # Фичи, включенные по умолчанию (здесь это поддержка chrono)

# Фича для включения поддержки f16/bf16.
# В текущей реализации (без явного использования этих типов при загрузке) не активна.
with_f16_bf16_support = ["dep:half", "dep:bytemuck"]

# Фича для включения chrono (для ModelInfo.loaded_at)
with_chrono = ["dep:chrono"]

# Фича для включения интеграции ошибок с utils_crate
with_utils_crate_errors = ["dep:utils_crate"]
