# model_loader/Cargo.toml
[package]
name = "model_loader"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
# publish = { workspace = true } # publish for model_loader was true in user's file.
                                 # Setting to false as per general workspace policy (root publish=false).
publish = false
description = "Загрузчик моделей и их конфигураций (SafeTensors, MPK) для проекта."

[dependencies]
# --- Локальные зависимости ---
core_burn = { path = "../core_burn" } # Нужен всегда для структур моделей.
utils_crate = { path = "../utils_crate", features = ["serde"], optional = true } # Для ModelLoaderError, если он конвертируется из UtilsError.

# --- Зависимости, версии которых наследуются из workspace ---
# `burn` наследует базовый набор фич из workspace (включая "autodiff").
# `model_loader` не использует "autodiff" напрямую, но наследование не мешает.
burn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, optional = true } # Опционален, включается фичей `with_chrono`.
bytemuck = { workspace = true, optional = true } # Опционален, для фичи `with_f16_bf16_support`.
half = { workspace = true, optional = true }     # Опционален, для фичи `with_f16_bf16_support`.
anyhow = { workspace = true } # Added as it was in the first iteration and is a common utility

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true } # Для асинхронных тестов.
# Тестовый бэкенд Burn объявляется здесь с конкретной версией.
burn-ndarray = { version = "0.17.0", default-features = false, features = ["std", "module", "tensor", "serde"] }

[features]
default = ["with_chrono"] # По умолчанию включаем поддержку временных меток.
# Фича для поддержки типов f16/bf16.
with_f16_bf16_support = ["dep:half", "dep:bytemuck"]
# Фича для включения chrono.
with_chrono = ["dep:chrono"]
# Фича для интеграции ошибок с utils_crate.
with_utils_crate_errors = ["dep:utils_crate"]
```
