# model_loader/Cargo.toml
[package]
name = "model_loader"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
publish = { workspace = true } # This will resolve to `false`
description = "Загрузчик моделей и их конфигураций (SafeTensors) для AI Агента."

[dependencies]
core_burn = { path = "../core_burn" }
utils_crate = { path = "../utils_crate", features = ["serde_support"], optional = true }
burn = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
memmap2 = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
half = { workspace = true, optional = true }

[dev-dependencies]
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
burn-ndarray = { version = "0.17.0", default-features = false, features = ["std"] } 

[features]
default = []
with_chrono = ["dep:chrono"]
with_f16_bf16_support = ["dep:half", "dep:bytemuck"]
with_utils_crate_errors = ["dep:utils_crate"]
```
